Bug 223442 - Text colors are wrong
Summary: Text colors are wrong
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-01-19 19:49 UTC by Thomas McGuire
Modified: 2010-01-22 15:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 19:49:30 UTC
Version:           4.5 (using Devel)
OS:                Linux

For some reason, the default text color seems to be blue now.
Also, quote coloring does not work (there are 3 quote colors for different levels)

Could be a Webkit issue, or could be an issue with splitting the config away from KMail.
Comment 1 Thomas McGuire 2010-01-19 19:51:13 UTC
This is a blocker, blue text makes a bad first impression.
Comment 2 Torgny Nyblom 2010-01-20 20:10:59 UTC
Issue is probably in the attachment handling code.
All text is wrapped with "<a id="...">TEXT</a>"
Comment 3 Torgny Nyblom 2010-01-22 15:08:44 UTC
SVN commit 1078629 by tnyblom:

Fix body text color (HTML does not allow one element tags to be closed by "<tag />", this is for HTML).

Fix Quotation coloring of text mails.

BUG: 223442


 M  +23 -23    objecttreeparser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1078629