Fix body text color (HTML does not allow one element tags to be closed by "<tag />", this is for HTML).

Fix Quotation coloring of text mails.

BUG: 223442

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1078629